kubernetes/aks/system/monitoring/phoenix/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: phoenix
spec:
  serviceName: phoenix
  replicas: 1
  selector:
    matchLabels:
      app: phoenix
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
        prometheus.io/scrape: "true"
      labels:
        app: phoenix
    spec:
      containers:
        - args:
            - -m
            - phoenix.server.main
            - serve
          command:
            - python
          image: arizephoenix/phoenix:version-5.5.2
          name: phoenix
          ports:
            - containerPort: 6006
            - containerPort: 9090
            - containerPort: 4317
          volumeMounts:
            - mountPath: /mnt/data
              name: phoenix
          readinessProbe:
            httpGet:
              port: 6006
  volumeClaimTemplates:
    - metadata:
        name: phoenix
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
